--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,57 @@
+#navBar {
+  display: block;
+  background-color: white;
+  display: inline-block;
+  width: 98vw;
+  border: 3px solid white;
+  border-radius: 5px;
+  margin: 6px;
+}
 
+.timer {
+  float: right;
+}
+
+.highscore {
+  float: left;
+}
+
+h4 {
+  padding: 10px 8px 10px 8px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+button {
+  display: block;
+  background-color: #99131300;
+  color: white;
+  width: 120px; height: 120px;
+  border-radius: 50%;
+  padding: 10px 16px 10px 16px;
+  font-size: 17px;
+  font-family: "Inconsolata", monospace;
+  margin: 10px auto;
+}
+
+body {
+    background: #00b4ff;
+    color: #333;
+    font: 100% Lato, Arial, Sans Serif;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
+#quizContainer {
+  text-align: center;
+  padding: 12vh;
+}
+
+#quiz {
+  text-align: center;
+}
