--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,7 @@
+/* navbar and elements */
 #navBar {
   display: block;
-  background-color: white;
-  display: inline-block;
   width: 98vw;
-  border: 3px solid white;
-  border-radius: 5px;
   margin: 6px;
 }
 
@@ -15,6 +12,7 @@
 .highscore {
   float: left;
 }
+/* end */
 
 h4 {
   padding: 10px 8px 10px 8px;
@@ -33,14 +31,21 @@ button {
   border-radius: 50%;
   padding: 10px 16px 10px 16px;
   font-size: 17px;
-  font-family: "Inconsolata", monospace;
   margin: 10px auto;
 }
+
+button:hover {background-color: #000000}
+
+button:active {
+  background-color: #000000;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
 
 body {
     background: #00b4ff;
     color: #333;
-    font: 100% Lato, Arial, Sans Serif;
     height: 100vh;
     margin: 0;
     padding: 0;
